--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,12 +1,11 @@
 ---
-name: Tails Azimuth
+name: Gigi
 avatar: /static/images/avatar.png
-occupation: Professor of Atmospheric Science
-company: Stanford University
-email: address@yoursite.com
-twitter: https://twitter.com/Twitter
-linkedin: https://www.linkedin.com
-github: https://github.com
+occupation: Professional Shitposter
+company: Bitcoin
+email: gigi@opensats.org
+twitter: https://twitter.com/dergigi
+github: https://github.com/dergigi
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
