Add dergigi as author

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -1,11 +1,11 @@
 ---
-name: OpenSats
+name: Gigi
 avatar: /static/images/avatar.png
-occupation: 501(c)(3) public charity
-company: OpenSats
-email: support@opensats.org
-twitter: https://twitter.com/OpenSats
-github: https://github.com/OpenSats
+occupation: Professional Shitposter
+company: Bitcoin
+email: gigi@opensats.org
+twitter: https://twitter.com/dergigi
+github: https://github.com/dergigi
 ---
 
 Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
