--- a/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
+++ b/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
@@ -1,9 +1,9 @@
 ---
-title: "OpenSats Receives Additional Funding of $10m from #startsmall"
+title: "Additional Funding from #startsmall"
 date: '2023-05-04'
 tags: ['OpenSats', 'funding', 'startsmall']
 draft: false
-summary: "OpenSats receives $10 million from #startsmall for bitcoin & nostr FLOSS development."
+summary: "OpenSats receives $10 million from #startsmall for bitcoin, nostr, and related FLOSS development."
 ---
 
 We are delighted to announce that OpenSats has received a generous donation of
