--- a/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
+++ b/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
@@ -3,7 +3,7 @@ title: "Additional Funding from #startsmall"
 date: '2023-05-04'
 tags: ['OpenSats', 'funding', 'startsmall', 'bitcoin', 'nostr']
 draft: false
-summary: "OpenSats receives $10 million from #startsmall for bitcoin, nostr, and related FLOSS development."
+summary: "OpenSats receives $10 million from #startsmall for bitcoin, nostr, and related FOSS development."
 ---
 
 We are delighted to announce that OpenSats has received a generous donation of
