Update OpenSats' About

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,8 +8,8 @@ twitter: https://twitter.com/OpenSats
 github: https://github.com/OpenSats
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
+Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which aims to fund Bitcoin-related free and open-source projects and associated education and research initiatives.
 
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
+We want to see contributors to Bitcoin and FOSS (free and open-source) tools supported by a sustainable ecosystem and consistent funding, so we set up a platform to do just that. Donors can come to the OpenSats web platform and either recommend gifts to specific project areas or contribute to our general fund.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+We distribute grants to a wide variety of contributor types (developers, designers, researchers, educators, reviewers...), but only to those working on Bitcoin and open-source projects that will improve public access to Bitcoin infrastructure.
