--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -8,8 +8,17 @@ twitter: https://twitter.com/OpenSats
 github: https://github.com/OpenSats
 ---
 
-Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which aims to fund Bitcoin-related free and open-source projects and associated education and research initiatives.
+Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which
+aims to fund Bitcoin-related free and open-source projects and associated
+education and research initiatives.
 
-We want to see contributors to Bitcoin and FOSS (free and open-source) tools supported by a sustainable ecosystem and consistent funding, so we set up a platform to do just that. Donors can come to the OpenSats web platform and either recommend gifts to specific project areas or contribute to our general fund.
+We want to see contributors to Bitcoin and FOSS (free and open-source) tools
+supported by a sustainable ecosystem and consistent funding, so we set up a
+platform to do just that. Donors can come to the OpenSats web platform and
+either recommend gifts to specific project areas or contribute to our general
+fund.
 
-We distribute grants to a wide variety of contributor types (developers, designers, researchers, educators, reviewers...), but only to those working on Bitcoin and open-source projects that will improve public access to Bitcoin infrastructure.
+We distribute grants to a wide variety of contributor types (developers,
+designers, researchers, educators, reviewers, and the like), but only to those
+working on Bitcoin and open-source projects that will improve public access to
+Bitcoin infrastructure.
