--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -1,6 +1,7 @@
 ---
 title: The OpenSats Mission
 summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
+image: /static/images/avatar.png
 layout: PageLayout
 ---
 
