--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -9,54 +9,116 @@ layout: PageLayout
 
 - Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) public charity which aims to fund Bitcoin-related free and open-source projects and associated education and research initiatives.
 
-We want to see contributors to Bitcoin Core and FOSS (free and open-source) tools supported by a sustainable ecosystem and consistent funding, so we set up a platform to do just that. Donors can come to the OpenSats web platform and either recommend gifts to specific project areas or contribute to our general fund.
+We want to see contributors to Bitcoin Core and FOSS (free and open-source)
+tools supported by a sustainable ecosystem and consistent funding, so we set up
+a platform to do just that. Donors can come to the OpenSats web platform and
+either recommend gifts to specific project areas or contribute to our general
+fund.
 
-We distribute grants to a wide variety of contributor types (developers, designers, researchers, educators, reviewers...), but only to those working on Bitcoin and open-source projects that will improve public access to Bitcoin infrastructure.
+We distribute grants to a wide variety of contributor types (developers,
+designers, researchers, educators, reviewers...), but only to those working on
+Bitcoin and open-source projects that will improve public access to Bitcoin
+infrastructure.
 
 ## How are funds distributed?
 
-- Donations to the **general fund** will be distributed quarterly by our board. We evaluate and assess applications to make sure any grants are awarded to high impact projects in the Bitcoin space.
-- We also maintain a list of mission-focused, open-source projects that have been vetted by our board members for continuous funding. Donors may recommend their gifts be directed to these specific projects; Open Sats will consider these recommendations but will retain sole discretion as to how funds are distributed.
+Donations to the **general fund** will be distributed quarterly by our board. We
+evaluate and assess applications to make sure any grants are awarded to high
+impact projects in the Bitcoin space.
+
+We also maintain a list of mission-focused, open-source projects that have been
+vetted by our board members for continuous funding. Donors may recommend their
+gifts be directed to these specific projects; Open Sats will consider these
+recommendations but will retain sole discretion as to how funds are distributed.
 
 ## How much of my donation goes towards individuals and projects supported by Open Sats?
 
-- All donations to the **general fund** and specific, mission-aligned FOSS projects are 100% passed through to Open Sats grant recipients. We try our best to find donor matching partners to ensure that no transaction fees are withheld regardless of payment method (thanks to our generous donors).
+All donations to the **general fund** and specific, mission-aligned FOSS
+projects are 100% passed through to Open Sats grant recipients. We try our best
+to find donor matching partners to ensure that no transaction fees are withheld
+regardless of payment method (thanks to our generous donors).
 
 ## Do you distribute grants in bitcoin or fiat?
 
-- We only distribute grants in bitcoin.
-- We accept donations in fiat currency, but they are transferred to our exchange partner and used to purchase bitcoin. The bitcoin is then held and eventually distributed to project and grant recipients.
+We only distribute grants in bitcoin.
+
+We accept donations in fiat currency, but they are transferred to our exchange
+partner and used to purchase bitcoin. The bitcoin is then held and eventually
+distributed to project and grant recipients.
 
 ## How do you collect bitcoin donations?
 
-- We use BTCPay Server to collect bitcoin on chain and lightning donations. This ensures that we pay no processing fees and your funds are stretched even farther.
+We use BTCPay Server to collect bitcoin on chain and lightning donations. This
+ensures that we pay no processing fees and your funds are stretched even
+farther.
 
 ## How can I communicate with you?
 
-- Funding opportunities are announced once per year, depending on funding availability. Projects that align with our mission statement are encouraged to apply. Board members evaluate each application based on technical merit, potential impact, and the team&#39;s ability to execute.
-- All projects should be free and open-source and related to Bitcoin or an ancillary technology (like Tor, etc.) which helps Bitcoin use. Your project must align with the mission of our charity to be eligible for donations.
+Funding opportunities are announced once per year, depending on funding
+availability. Projects that align with our mission statement are encouraged to
+apply. Board members evaluate each application based on technical merit,
+potential impact, and the team&#39;s ability to execute.
+
+All projects should be free and open-source and related to Bitcoin or an
+ancillary technology (like Tor, etc.) which helps Bitcoin use. Your project must
+align with the mission of our charity to be eligible for donations.
 
 ## How do I become listed on the site?
 
-- Any project that is free and open-source and is aligned with the OpenSats mission are free to [submit an application](http://opensats.org/apply) for their project to be listed on the [OpenSats website](http://opensats.org/projects)
-- All applications which fulfill the criteria will be evaluated by the Board. Upon board approval and collection of necessary supplemental data, approved projects will be listed on the OpenSats project portal. Donors will be able to contribute funds and recommend that the OpenSats&#39; board considers their donations be allocated towards these pre-approved, mission-aligned projects.
-- If you are helping Bitcoin and FOSS, please [submit an application](http://opensats.org/apply) to be listed on our site.
+Any project that is free and open-source and is aligned with the OpenSats
+mission are free to [submit an application](http://opensats.org/apply) for their
+project to be listed on the [OpenSats website](http://opensats.org/projects)
+
+All applications which fulfill the criteria will be evaluated by the Board. Upon
+board approval and collection of necessary supplemental data, approved projects
+will be listed on the OpenSats project portal. Donors will be able to contribute
+funds and recommend that the OpenSats&#39; board considers their donations be
+allocated towards these pre-approved, mission-aligned projects.
+
+If you are helping Bitcoin and FOSS, please [submit an
+application](http://opensats.org/apply) to be listed on our site.
 
 ## How did you choose the board?
 
-- We didn&#39;t want any one person or small group to have control of the decision making process of OpenSats, so we created a transparent, public-facing, and accountable nine person board to make all organizational decisions.
-- OpenSats&#39; board members have deep-seated values and will stop at nothing to support and ensure the survival of free and open-source technology like Bitcoin.
-- The board is composed of well-known and respected public-facing individuals who will carry the torch and be held accountable for their choices. We encourage community feedback, dialogue, and constructive criticism. We can only promise to do our best to ensure that all funds go to deserving projects which support OpenSats&#39; mission of creating a sustainable and consistent ecosystem of funding for Bitcoin and Bitcoin-related FOSS contributors.
-- We are committed to being 100% passthrough for all donations made on our platform. To this day our operational, legal, and payment processing fees have been graciously and privately funded.
-- Please consider donating to the [OpenSats operational fund](https://opensats.org/projects/opensats_operations_budget) which will help cover our basic operational expenses (which we have kept to a minimum) so we can ensure that all donations intended for Bitcoin and FOSS projects remains 100% passthrough.
+We didn&#39;t want any one person or small group to have control of the decision
+making process of OpenSats, so we created a transparent, public-facing, and
+accountable nine person board to make all organizational decisions.
+
+OpenSats&#39; board members have deep-seated values and will stop at nothing to
+support and ensure the survival of free and open-source technology like Bitcoin.
+
+The board is composed of well-known and respected public-facing individuals who
+will carry the torch and be held accountable for their choices. We encourage
+community feedback, dialogue, and constructive criticism. We can only promise to
+do our best to ensure that all funds go to deserving projects which support
+OpenSats&#39; mission of creating a sustainable and consistent ecosystem of
+funding for Bitcoin and Bitcoin-related FOSS contributors.
+
+We are committed to being 100% passthrough for all donations made on our
+platform. To this day our operational, legal, and payment processing fees have
+been graciously and privately funded.
+
+Please consider donating to the [OpenSats operational
+fund](https://opensats.org/projects/opensats_operations_budget) which will help
+cover our basic operational expenses (which we have kept to a minimum) so we can
+ensure that all donations intended for Bitcoin and FOSS projects remains 100%
+passthrough.
 
 ## Tell me more about your board. How does it work?
 
-- We have nine board members and we vote by majority. All standard decisions (like which new projects are added to the website or which projects will receive grants allocated from the general fund) are made by simple majority (5-4), while board-related changes will require 6-3 majority. New members to the board will be announced publicly.
+We have nine board members and we vote by majority. All standard decisions (like
+which new projects are added to the website or which projects will receive
+grants allocated from the general fund) are made by simple majority (5-4), while
+board-related changes will require 6-3 majority. New members to the board will
+be announced publicly.
 
 ## Are you really 100% passthrough?
 
-- Yes, really. We have an operational budget to cover lawyers, accountants, and basic operational costs, but they aren't paid from your donations to projects. Our operational costs are covered by generous donors who regularly donate to our [operations budget](https://opensats.org/projects/opensats_operations_budget).
+Yes, really. We have an operational budget to cover lawyers, accountants, and
+basic operational costs, but they aren't paid from your donations to projects.
+Our operational costs are covered by generous donors who regularly donate to our
+[operations budget](https://opensats.org/projects/opensats_operations_budget).
+
   - John Pfeffer, Greg Foss, Ten31, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all general fund and project specific donations.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
   - River provides our bitcoin exchange services with no added fees.
@@ -65,6 +127,14 @@ We distribute grants to a wide variety of contributor types (developers, designe
 
 ## Are my donations tax deductible?
 
-- Yes, Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit organization, All gifts and donations are tax-deductible to the full extent of the law.
-- If you would like to receive a tax deduction, we may need to collect supplementary information like your name and email for required recordkeeping purposes.
-- OpenSats relies on donors like you to help promote and support a sustainable ecosystem of contributors to Bitcoin and related free and open-source projects. We greatly appreciate your contributions.
+Yes, Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit
+organization, All gifts and donations are tax-deductible to the full extent of
+the law.
+
+If you would like to receive a tax deduction, we may need to collect
+supplementary information like your name and email for required recordkeeping
+purposes.
+
+OpenSats relies on donors like you to help promote and support a sustainable
+ecosystem of contributors to Bitcoin and related free and open-source projects.
+We greatly appreciate your contributions.
