--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -57,7 +57,7 @@ farther.
 Funding opportunities are announced once per year, depending on funding
 availability. Projects that align with our mission statement are encouraged to
 apply. Board members evaluate each application based on technical merit,
-potential impact, and the team&#39;s ability to execute.
+potential impact, and the team's ability to execute.
 
 All projects should be free and open-source and related to Bitcoin or an
 ancillary technology (like Tor, etc.) which helps Bitcoin use. Your project must
@@ -72,7 +72,7 @@ project to be listed on the [OpenSats website](http://opensats.org/projects)
 All applications which fulfill the criteria will be evaluated by the Board. Upon
 board approval and collection of necessary supplemental data, approved projects
 will be listed on the OpenSats project portal. Donors will be able to contribute
-funds and recommend that the OpenSats&#39; board considers their donations be
+funds and recommend that the OpenSats' board considers their donations be
 allocated towards these pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an
@@ -80,18 +80,18 @@ application](http://opensats.org/apply) to be listed on our site.
 
 ## How did you choose the board?
 
-We didn&#39;t want any one person or small group to have control of the decision
+We didn't want any one person or small group to have control of the decision
 making process of OpenSats, so we created a transparent, public-facing, and
 accountable nine person board to make all organizational decisions.
 
-OpenSats&#39; board members have deep-seated values and will stop at nothing to
+OpenSats' board members have deep-seated values and will stop at nothing to
 support and ensure the survival of free and open-source technology like Bitcoin.
 
 The board is composed of well-known and respected public-facing individuals who
 will carry the torch and be held accountable for their choices. We encourage
 community feedback, dialogue, and constructive criticism. We can only promise to
 do our best to ensure that all funds go to deserving projects which support
-OpenSats&#39; mission of creating a sustainable and consistent ecosystem of
+OpenSats' mission of creating a sustainable and consistent ecosystem of
 funding for Bitcoin and Bitcoin-related FOSS contributors.
 
 We are committed to being 100% passthrough for all donations made on our
@@ -128,7 +128,7 @@ Our operational costs are covered by generous donors who regularly donate to our
 ## Are my donations tax deductible?
 
 Yes, Open Sats Initiative, Inc. (EIN 85-2722249) is a 501(c)(3) non-profit
-organization, All gifts and donations are tax-deductible to the full extent of
+organization. All gifts and donations are tax-deductible to the full extent of
 the law.
 
 If you would like to receive a tax deduction, we may need to collect
