The Mission -> Our Mission

--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -1,5 +1,5 @@
 ---
-title: The OpenSats Mission
+title: Our Mission
 summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
 image: /static/images/avatar.png
 layout: PageLayout
