Update Gigi's bio

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -1,15 +1,24 @@
 ---
 name: Gigi
-avatar: /static/images/avatar.png
+avatar: /static/images/board/gigi.jpg
 occupation: Professional Shitposter
 company: Bitcoin
 email: gigi@opensats.org
 twitter: https://twitter.com/dergigi
 github: https://github.com/dergigi
+board: true
 ---
 
-Tails Azimuth is a professor of atmospheric sciences at the Stanford AI Lab. His research interests includes complexity modelling of tailwinds, headwinds and crosswinds.
-
-He leads the clean energy group which develops 3D air pollution-climate models, writes differential equation solvers, and manufactures titanium plated air ballons. In his free time he bakes raspberry pi.
-
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed neque elit, tristique placerat feugiat ac, facilisis vitae arcu. Proin eget egestas augue. Praesent ut sem nec arcu pellentesque aliquet. Duis dapibus diam vel metus tempus vulputate.
+Gigi is the author of 21 Lessons, a popular book about lessons learned from
+falling down the Bitcoin rabbit hole. His current work-in-progress book, 21
+Ways, tries to illuminate Bitcoin from multiple angles, using metaphors from
+biology, physics, engineering, and other disciplines. He is the creator and
+maintainer of bitcoin-resources.com, a comprehensive list of curated books,
+articles, podcasts, and other resources that help to provide a multi-faceted
+understanding of Bitcoin. In 2019 he launched the German-speaking Bitcoin
+podcast "Einundzwanzig" with one of his co-hosts which turned into a community
+movement that now spans multiple countries. He is passionate about privacy,
+human rights, and freedom technology. As the head of strategy and operations at
+OpenSats, he spends most of his day thinking about how to best support the
+development of free and open-source software as we transition towards an
+increasingly bitcoinized world.
