Use dummy blog to test multi-author

--- a/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
+++ b/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
@@ -3,6 +3,7 @@ title: "Announcing OpenSats LTS Grants"
 date: '2023-05-21'
 tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
+authors: ['dergigi']
 summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
 ---
 
