--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -5,6 +5,7 @@ occupation: Professional Shitposter
 company: Bitcoin
 email: gigi@opensats.org
 twitter: https://twitter.com/dergigi
+nostr: nostr:npub1dergggklka99wwrs92yz8wdjs952h2ux2ha2ed598ngwu9w7a6fsh9xzpc
 github: https://github.com/dergigi
 board: true
 ---
