--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -2,7 +2,7 @@
 name: Gigi
 avatar: /static/images/board/gigi.jpg
 occupation: Professional Shitposter
-company: Bitcoin
+company: OpenSats
 twitter: https://twitter.com/dergigi
 nostr: nostr:npub1dergggklka99wwrs92yz8wdjs952h2ux2ha2ed598ngwu9w7a6fsh9xzpc
 github: https://github.com/dergigi
