Add OpenSats' nostr pubkey

--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -5,6 +5,7 @@ occupation: 501(c)(3) public charity
 company: OpenSats
 email: support@opensats.org
 twitter: https://twitter.com/OpenSats
+nostr: npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f
 github: https://github.com/OpenSats
 ---
 
