Remove `nostr:` prefix from pubkey in author metadata

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/board/gigi.jpg
 occupation: Professional Shitposter
 company: OpenSats
 twitter: https://twitter.com/dergigi
-nostr: nostr:npub1dergggklka99wwrs92yz8wdjs952h2ux2ha2ed598ngwu9w7a6fsh9xzpc
+nostr: npub1dergggklka99wwrs92yz8wdjs952h2ux2ha2ed598ngwu9w7a6fsh9xzpc
 github: https://github.com/dergigi
 board: true
 ---
