--- a/data/authors/dread.mdx
+++ b/data/authors/dread.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/board/dread.jpg
 occupation: Freedom Tech Advocate
 company: OpenSats
 twitter: https://twitter.com/PoleVaultDream
-nostr: nostr:npub1qqqqqq0u2gj96tdfvqymdqn739k4s0h9rzdwyegfmalv28j7a5ssh5ntu2
+nostr: npub1qqqqqq0u2gj96tdfvqymdqn739k4s0h9rzdwyegfmalv28j7a5ssh5ntu2
 github: https://github.com/islandbitcoin
 board: true
 ---
