--- a/data/authors/odell.mdx
+++ b/data/authors/odell.mdx
@@ -4,7 +4,7 @@ avatar: /static/images/board/odell.jpg
 occupation: Freedom Tech Advocate
 company: OpenSats
 twitter: https://twitter.com/ODELL
-nostr: nostr:npub1qny3tkh0acurzla8x3zy4nhrjz5zd8l9sy9jys09umwng00manysew95gx
+nostr: npub1qny3tkh0acurzla8x3zy4nhrjz5zd8l9sy9jys09umwng00manysew95gx
 github: https://github.com/modl21
 board: true
 ---
