Explicit nym, optional name

--- a/data/authors/abitcoinperson.mdx
+++ b/data/authors/abitcoinperson.mdx
@@ -1,5 +1,6 @@
 ---
 name: Ben Price
+nym: abitcoinperson
 avatar: /static/images/board/abitcoinperson.jpg
 occupation: Founder
 company: The Bitcoin Company
