--- a/data/authors/niftynei.mdx
+++ b/data/authors/niftynei.mdx
@@ -1,5 +1,6 @@
 ---
-name: niftynei
+name: Lisa Neigut
+nym: niftynei
 avatar: /static/images/board/niftynei.jpg
 occupation: Founder
 company: Base58
