--- a/data/authors/odell.mdx
+++ b/data/authors/odell.mdx
@@ -1,5 +1,6 @@
 ---
-name: ODELL
+name: Matt Odell
+nym: ODELL
 avatar: /static/images/board/odell.jpg
 occupation: Freedom Tech Advocate
 company: OpenSats
