Update company field

--- a/data/authors/dread.mdx
+++ b/data/authors/dread.mdx
@@ -3,7 +3,7 @@ name: Dread
 nym: dread
 avatar: /static/images/board/dread.jpg
 occupation: Freedom Tech Advocate
-company: OpenSats
+company: '#OneLoveBitcoin'
 twitter: https://twitter.com/PoleVaultDream
 nostr: npub1qqqqqq0u2gj96tdfvqymdqn739k4s0h9rzdwyegfmalv28j7a5ssh5ntu2
 github: https://github.com/islandbitcoin
