--- a/data/authors/odell.mdx
+++ b/data/authors/odell.mdx
@@ -3,7 +3,7 @@ name: Matt Odell
 nym: ODELL
 avatar: /static/images/board/odell.jpg
 occupation: Freedom Tech Advocate
-company: OpenSats
+company: Ten31
 twitter: https://twitter.com/ODELL
 nostr: npub1qny3tkh0acurzla8x3zy4nhrjz5zd8l9sy9jys09umwng00manysew95gx
 github: https://github.com/modl21
