Nifty: add links

--- a/data/authors/niftynei.mdx
+++ b/data/authors/niftynei.mdx
@@ -10,5 +10,6 @@ board: true
 ---
 
 Nifty is a lightning spec veteran, accomplished dev, and Blockstreamer. She
-started the bitcoin++ dev-conf series and runs Base58, the premier bitcoin
-protocol academy. Her current goal is to make bitcoin devs a NgU technology.
+started the [bitcoin++](https://btcplusplus.dev/) dev-conf series and runs
+[Base58](https://www.base58.info/), the premier bitcoin protocol academy. Her
+current goal is to make bitcoin devs a NgU technology.
