--- a/data/authors/odell.mdx
+++ b/data/authors/odell.mdx
@@ -10,9 +10,11 @@ github: https://github.com/modl21
 board: true
 ---
 
-Odell has worked in freedom tech education for a decade with podcasts, guides,
-and workshops. His work includes training activists on how to use the tools
-available to them. He is a Partner at Ten31 VC where he helped to deploy over
-$100M to bitcoin only projects. Recently he launched Bitcoin Park in Nashville,
-a campus focused on in person education and community development. He advises
-many bitcoin companies, you can find a full list here: https://odell.xyz
+Odell has worked in freedom tech education for a decade with
+[podcasts](https://citadeldispatch.com/), guides, and workshops. His work
+includes training activists on how to use the tools available to them. He is a
+Partner at [Ten31 VC](https://ten31.vc/) where he helped to deploy over $100M to
+bitcoin only projects. Recently he launched [Bitcoin
+Park](https://bitcoinpark.com/) in Nashville, a campus focused on in person
+education and community development. He advises many bitcoin companies, you can
+find a full list here: https://odell.xyz
