Gigi: add links

--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -10,16 +10,18 @@ github: https://github.com/dergigi
 board: true
 ---
 
-Gigi is the author of 21 Lessons, a popular book about lessons learned from
-falling down the Bitcoin rabbit hole. His current work-in-progress book, 21
-Ways, tries to illuminate Bitcoin from multiple angles, using metaphors from
-biology, physics, engineering, and other disciplines. He is the creator and
-maintainer of bitcoin-resources.com, a comprehensive list of curated books,
-articles, podcasts, and other resources that help to provide a multi-faceted
-understanding of Bitcoin. In 2019 he launched the German-speaking Bitcoin
-podcast "Einundzwanzig" with one of his co-hosts which turned into a community
-movement that now spans multiple countries. He is passionate about privacy,
-human rights, and freedom technology. As the head of strategy and operations at
+Gigi is the author of [21 Lessons](https://21lessons.com/), a popular book about
+lessons learned from falling down the Bitcoin rabbit hole. His current
+work-in-progress book, [21 Ways](https://21-ways.com/), tries to illuminate
+Bitcoin from multiple angles, using metaphors from biology, physics,
+engineering, and other disciplines. He is the creator and maintainer
+of [bitcoin-resources.com](https://bitcoin-resources.com/), a comprehensive list
+of curated books, articles, podcasts, and other resources that help to provide a
+multi-faceted understanding of Bitcoin. In 2019 he launched the German-speaking
+Bitcoin podcast \"[Einundzwanzig](https://einundzwanzig.space/)\" with one of
+his co-hosts which turned into a community movement that now spans [multiple
+countries](https://twentyone.world/). He is passionate about privacy, human
+rights, and freedom technology. As the head of strategy and operations at
 OpenSats, he spends most of his day thinking about how to best support the
 development of free and open-source software as we transition towards an
 increasingly bitcoinized world.
