Update Janine's bio

--- a/data/authors/j9roem.mdx
+++ b/data/authors/j9roem.mdx
@@ -9,9 +9,12 @@ github: https://github.com/enegnei
 board: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+Janine is a privacy researcher, independent investigative journalist, and
+educator on the topics of informational self-determination and
+(counter)surveillance. She is the author of '[This Month In Bitcoin Privacy][tmibp]'
+(TMIBP) newsletter, a member of the CryptoCurrency Certification Consortium
+(C4)'s Certified Bitcoin Professional exam committee, and on the team of the
+Human Rights Foundation's (HRF) [CBDC Tracker Fellowship][cbdc].
+
+[tmibp]: https://enegnei.github.io/This-Month-In-Bitcoin-Privacy/
+[cbdc]: https://hrf.org/cbdctracker/
