--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -1,6 +1,6 @@
 ---
 title: Our Mission
-summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
+summary: "Our mission is to support and maintain a sustainable ecosystem of funding for free and open-source projects and contributors. Our focus is Bitcoin."
 image: /static/images/avatar.png
 layout: PageLayout
 ---
