--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -10,47 +10,49 @@ layout: PageLayout
 We're incredibly grateful to contributors like you working to support Bitcoin,
 nostr, and other free and open-source projects.
 
-Because OpenSats is a 501(c)(3) non-profit, all projects we list on our website
-must be vetted by our board of directors to ensure that they help us further our
-mission of supporting contributors to Bitcoin and related free and open-source
-projects.
+Because OpenSats is a [501(c)(3) non-profit][about], all applications must be
+vetted by our board of directors to ensure that they help us further our
+[mission] of supporting contributors to Bitcoin, nostr, and related free and
+open-source projects.
 
-Additionally, OpenSats must support specific PROJECTS which help to further our
-charitable mission. As such, if you are an individual contributor, please be
-sure that you list a SPECIFIC PROJECT you are working on.
-
-The information collected below will be used in order to vet your project. If
-approved, OpenSats will create a project page on our [projects page][pp] where
-visitors can learn more about your project and donate if they choose to.  Your
-project will be listed for one year. After one year, you will be prompted to
-re-send your application should you wish to be listed again.
-
-OpenSats also distributes grants from a general fund and you may also choose to
+We also distribute grants from our [general fund][gf] and you may also choose to
 apply for a grant below.
 
 ## Criteria
 
-Bitcoin: We prioritize projects that will have a direct impact on the utility or
+All applications should be made with the following criteria in mind:
+
+- Bitcoin
+- Free and Open-Source
+- Transparency & Education
+
+Our [Grant Selection Process][gsp] involves the evaluation of multiple criteria,
+but these three are crucial for any successful application.
+
+**Bitcoin:** We prioritize projects that will have a direct impact on the utility or
 adoption of Bitcoin. We will consider all projects but prefer projects that are
 not readily funded and which have an obvious benefit to the Bitcoin community
 and ecosystem. Potential projects include Bitcoin Core contributions,
 scientific/security research, code review, design/UX improvements, etc.
 
-Free and Open-Source: OpenSats supports free and open-source software, tools,
+**Free and Open-Source:** OpenSats supports free and open-source software, tools,
 and contributors which complement Bitcoin and help Bitcoin reach its
 fullest potential. Potential areas of interest include secure messaging,
 merchant acceptance tools, layer two protocols, etc. Source code and documents
 resulting from funded projects must be made publicly available for access, edit,
 and redistribution free of charge and without restrictions.
 
-Education and Mentorship: Funded contributors and projects should be prepared to
+**Transparency & Education:** Funded contributors and projects should be prepared to
 share their experience and expertise with the greater community. We prefer
 developers who actively engage in mentorship, and help introduce Bitcoin
 software development to newcomers.
 
-If your project is selected to be listed, we will reach out with any additional
+If your application is approved, we will reach out with any additional
 information necessary to ensure you are able to receive donation payouts. This
 may include tax related information depending on your location and/or bitcoin
 addresses in order to receive donation payouts from OpenSats.
 
-[pp]: /projects
+[gf]: /projects/general_fund
+[mission]: /mission
+[about]: /about
+[gsp]: https://github.com/OpenSats/operations/blob/master/docs/grant-selection.md
