--- a/data/pages/submitted.mdx
+++ b/data/pages/submitted.mdx
@@ -9,12 +9,16 @@ Thank you for your application.
 
 We will review your submission as soon as we can. Our team will reach out in
 case further information is required for evaluation, or as soon as the board has
-made a final decision. We will do our best to reach out in a timely manner as
-your application progresses through the various stages of our [Grant Selection
-Process][review].
+made a final decision. 
 
-If you have any questions, don't hesitate to reach out to
-[support@opensats.org][mail].
+If you have any questions, don't hesitate to contact us
+at [support@opensats.org][mail]. We will do our best to reach out in a timely
+manner as your application progresses through the various stages of our [Grant
+Selection Process][review].
+
+Thank you for helping us fulfil [our mission][mission], which is to support
+builders like you.
 
 [mail]: mailto:support@opensats.org
 [review]: https://github.com/OpenSats/operations/blob/master/docs/grant-selection.md
+[mission]: /mission
