--- a/data/authors/jamesob.mdx
+++ b/data/authors/jamesob.mdx
@@ -9,9 +9,12 @@ github: https://github.com/jamesob
 board: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+James has worked as a software engineer since 2008 and had his first patch
+merged to Bitcoin Core in 2015. He leads multiple projects that may aid in the
+reliability and scalability of Bitcoin, including `OP_VAULT` ([BIP-345]) and
+`assumeutxo`. He has worked on various monitoring platforms, including bitcoinperf
+and bmon. He previously worked at Chaincode Labs and now contributes to
+open-source full time at [NYDIG].
+
+[BIP-345]: https://github.com/bitcoin/bips/pull/1421#issuecomment-1452814811
+[NYDIG]: https://nydig.com/
