Use relative links instead of absolute

--- a/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
+++ b/data/blog/ opensats-receives-additional-funding-of-dollar10m-from-startsmall.mdx
@@ -29,7 +29,7 @@ Half of the donation amount—$5m USD—will be dedicated to advancing the new a
 growing nostr ecosystem. We have set up a committee of nostr developers and
 tinkerers, including fiatjaf and NVK, who will help us to evaluate projects and
 protocol contributions. If you are working on nostr and looking for funding,
-please apply here: [https://opensats.org/apply](https://opensats.org/apply)
+please apply here: [https://opensats.org/apply](/apply)
 
 As part of expanding these efforts, NVK and Gigi are joining the OpenSats board
 to help with our organizational and funding decisions. Gigi will be joining in a
