--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -66,8 +66,8 @@ align with the mission of our charity to be eligible for donations.
 ## How do I become listed on the site?
 
 Any project that is free and open-source and is aligned with the OpenSats
-mission are free to [submit an application](http://opensats.org/apply) for their
-project to be listed on the [OpenSats website](http://opensats.org/projects)
+mission are free to [submit an application](/apply) for their
+project to be listed on the [OpenSats website](/projects)
 
 All applications which fulfill the criteria will be evaluated by the Board. Upon
 board approval and collection of necessary supplemental data, approved projects
@@ -76,7 +76,7 @@ funds and recommend that the OpenSats' board considers their donations be
 allocated towards these pre-approved, mission-aligned projects.
 
 If you are helping Bitcoin and FOSS, please [submit an
-application](http://opensats.org/apply) to be listed on our site.
+application](/apply) to be listed on our site.
 
 ## How did you choose the board?
 
@@ -99,7 +99,7 @@ platform. To this day our operational, legal, and payment processing fees have
 been graciously and privately funded.
 
 Please consider donating to the [OpenSats operational
-fund](https://opensats.org/projects/opensats_operations_budget) which will help
+fund](/projects/opensats_operations_budget) which will help
 cover our basic operational expenses (which we have kept to a minimum) so we can
 ensure that all donations intended for Bitcoin and FOSS projects remains 100%
 passthrough.
@@ -117,7 +117,7 @@ be announced publicly.
 Yes, really. We have an operational budget to cover lawyers, accountants, and
 basic operational costs, but they aren't paid from your donations to projects.
 Our operational costs are covered by generous donors who regularly donate to our
-[operations budget](https://opensats.org/projects/opensats_operations_budget).
+[operations budget](/projects/opensats_operations_budget).
 
   - John Pfeffer, Greg Foss, Ten31, and The Bitcoin Company have contributed to our legal and operational overhead or contributed technical development resources so OpenSats can stay 100% passthrough for all general fund and project specific donations.
   - BTCPay Server is a FOSS tool we use to accept bitcoin with no fees.
