--- a/data/authors/j9.mdx
+++ b/data/authors/j9.mdx
@@ -1,10 +1,10 @@
 ---
 name: Janine
-nym: j9roem
-avatar: /static/images/board/j9roem.jpg
+nym: j9
+avatar: /static/images/board/j9.jpg
 occupation: Privacy Girl
 company: Bitcoin
-twitter: https://twitter.com/j9roem
+twitter: https://twitter.com/j9
 github: https://github.com/enegnei
 board: true
 ---
