--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -2,12 +2,13 @@
 name: Gigi
 nym: dergigi
 avatar: /static/images/board/dergigi.jpg
-occupation: Professional Shitposter
+occupation: Executive Director
 company: OpenSats
 twitter: https://twitter.com/dergigi
 nostr: npub1dergggklka99wwrs92yz8wdjs952h2ux2ha2ed598ngwu9w7a6fsh9xzpc
 github: https://github.com/dergigi
 board: true
+ops: true
 ---
 
 Gigi is the author of [21 Lessons](https://21lessons.com/), a popular book about
