--- a/data/authors/h4rpr.mdx
+++ b/data/authors/h4rpr.mdx
@@ -1,6 +1,6 @@
 ---
 name: Harper
-nym: h4rper
+nym: h4rpr
 avatar: /static/images/team/h4rpr.jpg
 occupation: Operations Manager
 company: OpenSats
