Add links to Dread's bio

--- a/data/authors/dread.mdx
+++ b/data/authors/dread.mdx
@@ -41,12 +41,15 @@ time and knowledge to help grow the Bitcoin circular economy.
 Dread also contributes to several open source projects in the Bitcoin space,
 focusing on applications and services that allow anyone to run open source
 software on their own self-hosted server. He was involved in the creation and
-growth of Plebnet, a free and open online lightning community focused on helping
+growth of [Plebnet], a free and open online lightning community focused on helping
 the everyday man and woman to get started running their own lightning node.
 
-Dread now hosts a new web series and podcast, titled “One Love Bitcoin.” For
+Dread now hosts a new web series and podcast, titled “[One Love Bitcoin][OLB].” For
 Dread, “One Love Bitcoin” is more than just a show. It is a mantra, his mission
 and a way of life. He hopes to interview Bitcoiners from every country on earth,
 to share their stories, and in so doing, help to bring about an exodus from the
 failed fiat monetary experiment to the bright orange future made possible by
 Bitcoin.
+
+[OLB]: https://onelovebtc.com/
+[Plebnet]: https://t.me/plebnet
