--- a/data/authors/dergigi.mdx
+++ b/data/authors/dergigi.mdx
@@ -26,3 +26,62 @@ rights, and freedom technology. As the head of strategy and operations at
 OpenSats, he spends most of his day thinking about how to best support the
 development of free and open-source software as we transition towards an
 increasingly bitcoinized world.
+
+### PGP Key
+
+Fingerprint: `89C4 A25E 69A5 DE7F`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: Keybase Go 3.1.2 (darwin)
+
+xsFNBFyqxMABEACmufB1pnB4ZW+rApz0qL3RKI+su5gX9AAzlJGOrVfDHT/CsyGX
+o+A0Eob3AL0QsxUiuhXpaZkzSxnOhsmHN1uxEtYYpDTOsfysXvgiE/q+YwZzSb74
+avsNFTvhbsOgpTpwfAtX1ZgyGkBwEeLdT9B5EWBb9gNDNS+O+mUahFdfGF8vOToM
+cIlGdJzM3f7alumQgqVLdO7kTSF3odOPXy293n7/g1Z4epca2hMYP38N0eSc1y/u
+5RCOrgncwgJyWwt8mH7fc1/R29MSgEjwyGdOpnzHRrLFevtosE+YacUWzlm9P7Y/
+5Hdr8IT9vJRUrBTWlFjabgLlmYvf6lwMU97Dr4HxfL03a7h108hVn/Dd622jZ0AS
+gWKfFW85OfhTpMNSO2Vc+cBJZJgSSYbuN9/7acs8+VXeeT6XgdzFUbi41/q7aQI8
+XogoiJBxLQbzRWovMXyezW9BaMvxgVjEUUUZA0C9Lt8t4URgpGbWSTozknVxmw8o
+g9MzL+4zFVIqyW/yWC2oDdKVNJ/4S6Dc2qvPSBogbt8MA7fzZie2AFWN7ES/I/H4
+4wNFBE7gMkqhCmGYJCH52bUM/TuYy929vkmOGvwhm+k2guCk3ZpYjgKnYTShysrG
+GlkqGSWyo2E6y2b4zWxYXGWc8MweKgAp5LKedLFAnOHdusJVn0uIf4GqLwARAQAB
+zRRHaWdpIDxkZXJnaWdpQHBtLm1lPsLBeAQTAQgALAUCXKrEwAkQicSiXmml3n8C
+GwMFCR4TOAACGQEECwcJAwUVCAoCAwQWAAECAAAg+xAAkX+2j8Z0pPukGuoCK2of
+bgJIHgUr2TX1rLP4xkDzXPGEl2VXp6dTZE7UnX7Orhw6IBUv7c5Uwkof0QoxZ1wK
+8lFe/RYnvJrzksTZgQUTPrfL4ksZ9ApF6lRCCsgFdNPa+W4SXMLvKsllW5XUTFJ0
+gEKZaCjjTwc7mc9bHVE8iovzzLa88DxTAYY4ydyFksc3fkQhhgkZEAAXTmrkEPaP
+LBYatY18BODpxnKgjB/C05BB9LfiEINuj6QWV3lPcX8IhwAFsHs3VZhuZF5qwDIR
+rITwtbAswuLIbaZqAenWgHjeQw1euIzQG7XQx3Kin9f6GPrFnSoGRAoA4yhG1/ov
+Ld4pGCT2nowwpw9hq9oPQB1pJerMVn4rxXh1Z1PWRsnjPcliKW4IvkodeYpHEdpn
+k1/DjlbO15CwLtuvHoClZ9kI+GXUckvw3JaAHHU35neWC1NNn4p0/DjUaPylSWTk
+DLxNR/B9hFZG3MUkVVhn/yY1O95DFaYJ6jxnieCyBnNeIm+vHXl5mBbMkuwCo/dW
+FY6QzZMpJDnYt6SFewFPQL5R9218SpBdoX19Vk+c3k4OahEKZ4XgXFM/o7+0LD3z
+MjcY5SoUuPY1Yf1rAiVQAdGgUHIRvee+YGhWMmEqNKJIVfKB2ezUfi0dhcfiuKRw
+MIaU8pPvpIjt/z7E6ouy+HPOwU0EXKrEwAEQAN6gL45ophF6s27Ik7iTlt2NXLK0
+mfxEvdu8RBIdbwuYiefAyMZR4DJSZ4jqAnvub4R0x2kYtgYMQ5MRHv4jYdK5lgKw
+8Hp2uNwr+EjXOBW4F3pVxGpl/q/pMxmA/jOqDikZ+ei9O2kyseDOvXBSpLTIx2c/
+LmffLbTnv/WP4wsNGmyeh0V4aOptD3lbG53sjuPpLgQVZ5lLsSqWot05JArADPxy
+m35oLzZFY32V5HZBPsGhsGqMU4N/nm7ELZ9mcz6qvAszqp0CMiaoi/S7ycuQpvpH
+09iav4Ah7Tem5rPNLUSYQIyjiRWRQKOAH6/mc2ToyGxio6B5MA26Gq6GZeqZSbUL
+wEEcjWG6HR5dytYCSgnEC0fRAm/47hX80qMZAQ8/3U6ILNahREHIGn5cYok5/6kM
+S3IziCaBAvQ2kSeG16oQpv0SBTZMMNQXvjfh77kY7QRMoV9RYO1wee29RbLPqdBI
+x83QL9vztK2EqHwUOTu3SQydGAS/LLz+qP2EOK4XbJGWCvf1AC/Ru/IrxoB4iReK
+YRoYBwZcenNqTTVXn0zjvanoLV5tLbd7dMQ6cVIi3mvGpAKY7OV4+MJqQdZqI+jK
+1+QMcauRZd+YYUbu/pvfNipzoxIWpQb0yZf6mbo/OonJR9K+7FAkpCEV7IXlYAAC
+a7DB26wgeIGUFDzzABEBAAHCwXUEGAEIACkFAlyqxMAJEInEol5ppd5/AhsMBQke
+EzgABAsHCQMFFQgKAgMEFgABAgAARlUQAFpT9TN2zqjI4GTfi7G6QEFN0qkhChi2
+4E/G+rfC9r4IGFV5tFIwNnN0ON5rMIzs7e73bsr2whFfAOCCX0PDfaaU6FzXCAFI
+WIpELh1PhgvHwZQCjpu4R6MRei1IAUld5L3xrg49EFvxGYfp2ekgf8A/Z+KlJdVb
+DL4mJBaDkw4OO5rINdoMuXRmMRRVOtwhsmsMS1WUQxTnu2zG3hhbhiIz57w17jA5
+/s21GeBU9cjahJVGWw8rq9OIrJg127Iz02S+IEvfZ0D4eK7TXd3HrfzBjSE0SHez
+SSd6UWgSsUk/K93eEgfpYlIrmLqioBYs0+TFr+Nu3IQVW2qJwQygD8Fy0Ay6T+Gt
+gFIwnANyCTmqDvJChHG1t7sACVaBdtAutNmCDeuAX2gBH1ZBDd9WQ//pam/hEkzd
+l/z/Y1e4L+2/LDktbYkALoqYyKn4QTZQLACNQizjMickg5sZYOwdwShaK/cNyPad
++JcPtbm5Mtzi4unHGatd4Rn1LYYBnSJ9wv1yrftlZpYQOEG+HIaWY6Sro7b26I0n
+fY8gNEzbvzinNenNR3iIbVnG1yLME35F7EEh1AEfRn1mjklLNyh/yitIk77GQx1B
+eui7naLFAaE0udZn6vdyRRpgrvIRMEdy9UEsTvfOtwP8l2yKZMlfljXu+J4ITARY
+IYMWhg1y2RcR
+=irYJ
+-----END PGP PUBLIC KEY BLOCK-----
+```
