Add NVK's GPG key

--- a/data/authors/nvk.mdx
+++ b/data/authors/nvk.mdx
@@ -13,3 +13,65 @@ board: true
 NVK is the founder of Coinkite which make many of the devices Bitcoiners love,
 like COLDCARD, BLOCKCLOCK, OPENDIME. He is also having fun with the
 [Bitcoin.Review](https://bitcoin.review/) podcast and ham radios.
+
+
+---
+
+### PGP Key
+
+Fingerprint: `1C9E 033C 6C65 8606`
+
+```
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v2.0
+Comment: GPGTools - https://gpgtools.org
+
+mQINBFOQgNUBEADgdbsCpKUURtpK8ygmfnwtcmLA/sMEr0rZCb+bhLlrWqjVPwhq
+VryXxB9VNkHg904Sew/rxz0hGFLrUCpfPP0sxIV+Wd4mWnjKfAwzD5hrrKRcRB0V
+zFxHUZfCNK7BHaUBAbJySzuO3hV/FKIuHOIU7nZDqSy9i15ElxkNCWuz96VvaxiT
+xdOts0Yf29TZZ+IcAbxrpXMNdMb+UlO/9v4UWL+og8/K7fQRon7RATFAijqmAK20
+8StoDPC2/N/tnDFAj1vDHjZR7Rs5VRf54/+ymi+bFg5CySLOsSirxPGmqSrpgroZ
+3N0M9TVpsrB+a82YsDmESEVc95DpRGnSzd+gHmneBwL1+/TBL0Ov9bda5r738JAo
+hWhfE+yiVyUuKXBvnKu8Ov5Bu0Ya0z9fQs9RlANh+/zOEcK6YzoN81T3HsA8TF49
+EMPXpl4uohmYrvZuUJai8LOcrFBJLsrvg7GabclWG+Jg38XkESpOBKZ98jRb47qY
+7bjo7SU2RLQRHYEKFnUDK04Ac0RN7PPAaW+BqnvRA2oC4yvopfKQPmm4uUeKSVNX
+1ssENTQqsidhh6BGYE2NNUpAF1uGs2yiKvPMr+P/SXlWVJDwhw18LviOKcYpqPRs
+NTX6VVr0oxevp5n9dKlIaY/hLQSBmQb3mwfbA7e1Qspo/gjPSZ7fcAqyewARAQAB
+tCBSb2RvbGZvIE5vdmFrIDxyb2RvbGZvQHJudmsub3JnPokCNwQTAQoAIQUCU5CA
+1QIbAwULCQgHAwUVCgkICwUWAgMBAAIeAQIXgAAKCRAcngM8bGWGBsjAEADDzEw/
+FneVqaJ3ileL+R0moE+OF8eSd33Uny0lb1qTOIFiuMkn5e1lTv6NDWbDZPi3JUu5
+obtksiOSQL0gnm+fhps0K93o3u06Wdz7+wBg/evILf/ADX3NnLHBc4m5q6/JCE51
+pywh339oLRUP3omIaVNWjTtzjl0ayyvmX/tunZ6SwCFXSik5RE2lCp8z9Hhnln8/
+yA2p9WdPgkjJTxyEZNNzsI7bhzhWYPLbx4heQAJpJJjNo/5Miw0oO2/OUhWnnZSC
+JtJ5U/YLmvxDkgWTVbDTMiYxln7Fx2gh29f88m+0YoZy/npbAXMJ4qKgiEmJSzqb
+nPe8nEkjt4jHKf+7M4gCW5AV/ozFdRNAvuYo+vH8I0mbNO5/iRMRNuWnn9VETnCV
+OX8/gtVYdQpmXT62lk1fNuu+s6bw8K/nXGn/AXMmcNmGA+s9OLkU6cTOGGBBIqmx
+O6GaGhYscp6Bj/D3Aaq3h/N7SEBuQYlqwyoclSvy2NbAy68BGVhd45tOqR7JduUL
+mBEkiXfeIW4qzTYxRoDs68/lAMCvYROspqb1wmNJLd31aRXQ0xyFj2DncrHTfHZw
+NSNFZ0VwDPr6k1obnAoW+nSvUe6HsKp5kByO+us8tJfqhmbZ2/bPRWLTe/NLP8cO
+LPOGqYmwx4ER/GR2NISnK4SbFWqVJnNdDzltgrkCDQRTkIDVARAA2LW9UU7yQ70i
+ZSDQn5MUhswvp/AkbMJli4TidnkK94jYOMzkY1dzVNhxyHi/7DWWRGe9EMVifdfk
+qwaH+jEQ5MjQ6JbEwEPUPlMzIHCYXOiKOVQIMVNssGQoFo8d8xAX7jbg3DtSQPH8
+pUd/nO1d8Nu5jyNJZ/LyIXnrxfXp2w0mb2P7sVh5bmts1P1LmLJoqO14hTglXNI2
+FeS0LgYzYqNRjp35GpoY5ZcdNXAK0akmobS0EjzgwFCuuaP7GHRntOhvvgZmBdhL
+y9TVyy+ZxO8w+aI7lDC8sW+jo4e/dqNvo8OFe1eulz/GlY+km9RIoDrUGn9N8WKj
+rvK034PTfR+S10/MNm2J6QFlOh5ZF2dGkqNsJn+TVqhiaZ6J1fzUuZUIavppWza7
+wVRToFdJiqIW8h2VodUy59RySX+Kuuu4JagJ+dlGBEJ1TX0vMG8glrxcfIBe8oww
+Mr0yB4seFM/PNzuFP7uc6P+pqvclt23NbRVa8Zeuaqp1RcBoVQyEBxvuC26YwWTZ
+On0FC+QBciJsJtqNOUjw5Fmk3k1SmgE6v4brzr5vhTMTjEl30sVcFD7bdDYiJOqi
+3kfwFT5UhpV3mRziqMT4XBoo0bgqPjVVuX9BJE9vZf6/YSYca5PkMM9wsWZw14XJ
+no/KB/r4K0Rq/Pak1VtFSRms4PVN4j0AEQEAAYkCHwQYAQoACQUCU5CA1QIbDAAK
+CRAcngM8bGWGBvYMEAC4eB2NjsoBEA3xVL+SeAE/9nuSIjEXst7Ej44yVVyOtOul
+/uagnv3TACjQtgFMhX5GMGhbkINsyfbLF3ZfG1Ywp9CHwXxk0m1Dcpb6VaHi4++2
+tp4CQZMFqOsw/YXn0LvoyIVDSZbhjQImg5OPtjVNHF7T0mUCP2qlxD/fFEKwtxRj
+YfNb9ie8G9Z3Y0zBa+EizHO39PqZZQQxDW9oF3mXZKEry/Fe5PCr1v2Bdpmz3r0a
+v6HKBqg8cZavBsXsX/rCuFtbllyl/O/+cUQyfAXxwM2kgmc9jcXW3g0xy3mQNZnK
+/gzIv9BfqV6bpF9JNtpiIkXbH9aYcvqbRqULQgqxpwzbDL3Ti4yVausqWpdvJO+Z
+mrkN4Le+UCNwOLLVuDWOQ91grcHKg/cgH8gLG2hh4XgK+mqMySPaXCJ8C34ZsYEQ
+Dh+VLniLnfOpi/KXjoQ4hL/8DytLbFLOi46ATECRtHSIybdLdyFDK5ZeNz5mE9N9
+TMgGSmgt2e1OdVBiP4DucbrkUsEcBIHGM/I7osp3eXYqBMC2WS6eT5a7jOZI9lFo
+a7nV3Z6FDWCxOHRrriwV778t+zSKZt4S/zU6X17GdOtrvWJG2I7RFIV5yiTMHk9q
+zxCSY8w49IY/+QxxGQq2UjOxOsMLdLWCtIpaHuJeYxkStgRxJ52RKTbsWv9jig==
+=VEhF
+-----END PGP PUBLIC KEY BLOCK-----
+```
