Add Elaine's bio

--- a/data/authors/eiaine.mdx
+++ b/data/authors/eiaine.mdx
@@ -9,9 +9,10 @@ github: https://github.com/eiaine
 board: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+Elaine has a long history of working with the SEC to enhance regulatory
+understanding of crypto, sometimes not voluntarily. She is a [Bloomberg Opinion
+columnist][bloom] and a consultant for Global Financial Access. She lives on a
+turkey farm and is interested in projects that enable freedom tech out in the
+sticks.
+
+[bloom]: https://www.bloomberg.com/opinion/authors/AS-u1cDvxx8/elaine-ou
