Add Harper's bio

--- a/data/authors/h4rpr.mdx
+++ b/data/authors/h4rpr.mdx
@@ -9,9 +9,17 @@ github: https://github.com/h4rpr
 ops: true
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-culpa qui officia deserunt mollit anim id est laborum.
+Harper entered the Bitcoin ecosystem in 2020 at [BTC, Inc.](https://b.tc/) Most
+recently, he was a venture associate for the company’s capital allocation
+vehicle, [UTXO Management](https://www.utxo.management/), where he helped
+establish the [Bitcoin Magazine Ecosystem
+Fund](https://venture.angellist.com/v/back/the-bitcoin-magazine-2140-venture-fund).
+Prior to that he was an operations associate for The Bitcoin Conference,
+contributing his organizational efforts on the programming team for [Bitcoin
+2021](https://b.tc/conference/2021) and [Bitcoin
+2022](https://b.tc/conference/2022). Before entering the industry, he studied
+microbiology with a focus on laboratory research at the University of Alabama.
+
+Harper joined the OpenSats team part-time in 2022 to oversee the initiative’s
+operations, and in 2023 dedicated his full focus to scaling the organization in
+an effort to increase funding for bitcoin and FOSS development.
